update gitignore and read me

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,57 @@
 ################################################################################
 
 /.vs
+
+################################################################################
+# Python
+################################################################################
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+ENV/
+.env
+.venv
+*.egg-info/
+dist/
+build/
+
+################################################################################
+# IDEs
+################################################################################
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+################################################################################
+# OS
+################################################################################
+.DS_Store
+Thumbs.db
+
+################################################################################
+# Docker
+################################################################################
+*.log
+
+################################################################################
+# Node.js (for future services)
+################################################################################
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+################################################################################
+# Environment & Secrets
+################################################################################
+.env.local
+.env.*.local
+*.pem
+*.key
+config/*.local.*
