Remove PROJECT_ROADMAP.md from version control (now gitignored)

--- a/.gitignore
+++ b/.gitignore
@@ -714,3 +714,4 @@ secrets/
 # Development notes and summaries (not for version control)
 docs/SETUP_SUMMARY.md
 docs/PRODUCTION_IMPROVEMENTS.md
+docs/PROJECT_ROADMAP.md
