--- a/.gitignore
+++ b/.gitignore
@@ -716,3 +716,5 @@ docs/SETUP_SUMMARY.md
 docs/PRODUCTION_IMPROVEMENTS.md
 docs/PROJECT_ROADMAP.md
 docs/NUGET_IMPLEMENTATION.md
+docs/GITHUB_SETUP.md
+docs/CI_CD_PIPELINE_PLAN.md
