--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+          token: ${{ secrets.GHCR_TOKEN }}
 
       - name: Check submodule status
         run: |
@@ -82,6 +83,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.GHCR_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -192,6 +194,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.GHCR_TOKEN }}
 
       - name: Set up Docker Buildx
         if: matrix.service.build
@@ -266,6 +269,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.GHCR_TOKEN }}
 
       - name: Download Docker images
         uses: actions/download-artifact@v4
@@ -430,6 +434,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GHCR_TOKEN }}
 
       - name: Download test results
         uses: actions/download-artifact@v4
