--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,8 +40,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write
-      attestations: write
 
     steps:
       - name: Checkout code
@@ -91,12 +89,14 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: linux/amd64
 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ github.repository_owner }}/intramind-vector-service
-          subject-digest: ${{ steps.build.outputs.digest }}
-          push-to-registry: true
+      # Note: Attestations are not available for user-owned private repositories
+      # Uncomment when repository is public or moved to an organization
+      # - name: Generate artifact attestation
+      #   uses: actions/attest-build-provenance@v1
+      #   with:
+      #     subject-name: ${{ env.REGISTRY }}/${{ github.repository_owner }}/intramind-vector-service
+      #     subject-digest: ${{ steps.build.outputs.digest }}
+      #     push-to-registry: true
 
   # ============================================
   # Job 2: Build and Push API Gateway
@@ -111,8 +111,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write
-      attestations: write
 
     steps:
       - name: Checkout code
@@ -157,12 +155,14 @@ jobs:
           cache-to: type=gha,mode=max
           platforms: linux/amd64
 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v1
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ github.repository_owner }}/intramind-api-gateway
-          subject-digest: ${{ steps.build.outputs.digest }}
-          push-to-registry: true
+      # Note: Attestations are not available for user-owned private repositories
+      # Uncomment when repository is public or moved to an organization
+      # - name: Generate artifact attestation
+      #   uses: actions/attest-build-provenance@v1
+      #   with:
+      #     subject-name: ${{ env.REGISTRY }}/${{ github.repository_owner }}/intramind-api-gateway
+      #     subject-digest: ${{ steps.build.outputs.digest }}
+      #     push-to-registry: true
 
   # ============================================
   # Job 3: Verify Published Images
