--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -82,7 +82,7 @@ services:
       vector-service:
         condition: service_healthy
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8080/health/liveness || exit 1"]
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1"]
       interval: 5s
       timeout: 3s
       retries: 5
